english version Lausanne

--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/give.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/give.html.twig
@@ -25,11 +25,11 @@
 
         <ul>
             <li>give time</li>
-            <li>give talents</li>
+            <li>give of your talents</li>
             <li>or give financially</li>
         </ul>
 
-        <p>All of the operating and developing costs are covered by the free commitment of many. Our accounts are
+        <p>All of the running and developing costs are covered by the free commitment of many. Our accounts are
             approved by the General Assembly, after verification by a fiduciary.</p>
 
         <h3>The Bible declares...</h3>
@@ -63,12 +63,11 @@
 
         <h3>Building</h3>
 
-        <p>We would like to make the acquisition of a building that will allow us to develop.</p>
+        <p>We would like to make the acquisition of a building that will allow us to grow.</p>
 
-        <p>A building account is open to all of those who wants to see in a near future the Gospel Center in a new venue
-            and so be always more equipped for the mission God placed on our heart. We encourage everyone to make a
-            donation to see this project happen. CCP 10-186944-9. Payment slips are available at the welcome table,
-            during the celebrations. </p>
+        <p>A building dedicated account is open to all of those who want to see in a near future the Gospel Center in a
+            new venue. We encourage everyone to make a donation to see this project happen. CCP 10-186944-9. Payment
+            slips are available at the welcome table, during the celebrations. </p>
 
     </article>
 {% endblock %}
