--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/youth.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/youth.html.twig
@@ -68,11 +68,8 @@
 
         <h2 class="underline"><span>Garderie</span></h2>
 
-        <h3>The English version will come soon.</h3>
-
-        <p>La garderie prend le relais à la suite de l’activité Minicell !</p>
-
-        <p>Des jeux, des histoires, une collation … tout pour ravir les yeux et le cœur de ces tout-petits !</p>
+        <p>The childcare group takes over after the minicell’ activity. Games, stories, snack… simply everything to
+            delight the eyes and hearts of these little-ones!</p>
 
 
     </article>
