--- a/app/Resources/views/ruban_nav.html.twig
+++ b/app/Resources/views/ruban_nav.html.twig
@@ -31,7 +31,7 @@
     </ul>
 </nav>
 
-{% if center %}
+{% if page != "tv" and center %}
     <nav class="social">
         <h1>{{ 'gc.ruban.social'|trans }}</h1>
         <ul>
