--- a/src/gospelcenter/MediaBundle/Resources/views/layout.html.twig
+++ b/src/gospelcenter/MediaBundle/Resources/views/layout.html.twig
@@ -1,4 +1,3 @@
-{% set center = null %}
 {% set page = "tv" %}
 
 <!DOCTYPE html>
@@ -16,6 +15,23 @@
         <link rel="stylesheet" href="{{ asset('css/tv.css') }}" type="text/css"/>
     {% endblock %}
 
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                    m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-60150028-2', 'auto');
+        ga('send', 'pageview');
+
+    </script>
 
     {% block javascripts %}
         <script type="text/javascript" src="{{ asset('js/processed/mainNew.min.js') }}"></script>
