GCL Give update

--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/give.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/give.html.twig
@@ -52,6 +52,8 @@
 
             <p>CCP: 17-637864-2</p>
 
+            <p>IBAN: CH70 0900 0000 1763 7864 2</p>
+
             <p>Gospel Center Lausanne</p>
 
             <p>1007 Lausanne</p>
