meta for FB share

--- a/src/gospelcenter/CelebrationBundle/Resources/views/Celebration/list.html.twig
+++ b/src/gospelcenter/CelebrationBundle/Resources/views/Celebration/list.html.twig
@@ -10,7 +10,12 @@
 {% endblock %}
 
 {% block title %}
-    {{ parent() }} - Celebrations
+    {{ parent() }} - {{ 'gc.title.celebrations'|trans }}
+{% endblock %}
+
+{% block meta %}
+    {{ parent() }}
+    <meta property="og:title" content="{{ 'gc.title.celebrations'|trans }}"/>
 {% endblock %}
 
 {% block body %}
