--- a/src/gospelcenter/EventBundle/Resources/views/Event/list.html.twig
+++ b/src/gospelcenter/EventBundle/Resources/views/Event/list.html.twig
@@ -2,7 +2,10 @@
 
 {% block title %}{{ parent() }} - {{ 'gc.title.events'|trans }}{% endblock %}
 
-
+{% block meta %}
+    {{ parent() }}
+    <meta property="og:title" content="{{ 'gc.title.events'|trans }}"/>
+{% endblock %}
 
 {% block body %}
 
