--- a/src/gospelcenter/MediaBundle/Resources/views/layout.html.twig
+++ b/src/gospelcenter/MediaBundle/Resources/views/layout.html.twig
@@ -7,6 +7,14 @@
     <title>{% block title %}Gospel Center TV{% endblock %}</title>
     <meta name="viewport"
           content="initial-scale=1, minimum-scale=1, user-scalable=no, maximum-scale=1, width=device-width, minimal-ui">
+
+    {% block meta %}
+        <meta property="og:site_name" content="Gospel Center TV"/>
+        <meta property="og:url" content="gospel-center.tv"/>
+        <meta property="og:description" content="A PLACE WHERE MIRACLES HAPPEN!"/>
+        <meta property="og:type" content="website"/>
+    {% endblock %}
+
     <link rel="apple-touch-icon" href="{{ asset('apple-touch-icon.png') }}"/>
     <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" type="image/x-icon">
     <link rel="icon" type="image/png" href="{{ asset('favicon.png') }}"/>
