--- a/src/gospelcenter/PageBundle/Resources/views/Page/home.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/Page/home.html.twig
@@ -16,6 +16,16 @@
     <a id="logo" href="{{ path('gospelcenterPage_home', {'center': center.ref}) }}"></a>
 {% endblock %}
 
+{% block meta %}
+    {{ parent() }}
+    <meta property="og:title" content="Gospel Center {{ center.name }}"/>
+    <meta property="og:site_name" content="Gospel Center {{ center.name }}"/>
+    <meta property="og:url" content="gc-{{ center.ref }}.org"/>
+    <meta property="og:description" content="A PLACE WHERE MIRACLES HAPPEN!"/>
+    <meta property="og:image" content="{{ asset('FBshare_' ~ center.ref ~ '.jpg') }}"/>
+    <meta property="og:type" content="website"/>
+{% endblock %}
+
 {% block local_header %}
     <div class="gradient_top"></div>
     <div class="map_bg">
