--- a/src/gospelcenter/MediaBundle/Resources/views/layout.html.twig
+++ b/src/gospelcenter/MediaBundle/Resources/views/layout.html.twig
@@ -10,7 +10,7 @@
 
     {% block meta %}
         <meta property="og:site_name" content="Gospel Center TV"/>
-        <meta property="og:url" content="gospel-center.tv"/>
+        <meta property="og:url" content="http://gospel-center.tv"/>
         <meta property="og:description" content="A PLACE WHERE MIRACLES HAPPEN!"/>
         <meta property="og:type" content="website"/>
     {% endblock %}
