--- a/src/gospelcenter/PageBundle/Resources/views/Page/home.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/Page/home.html.twig
@@ -20,7 +20,7 @@
     {{ parent() }}
     <meta property="og:title" content="Gospel Center {{ center.name }}"/>
     <meta property="og:site_name" content="Gospel Center {{ center.name }}"/>
-    <meta property="og:url" content="gc-{{ center.ref }}.org"/>
+    <meta property="og:url" content="http://gc-{{ center.ref }}.org"/>
     <meta property="og:description" content="A PLACE WHERE MIRACLES HAPPEN!"/>
     <meta property="og:image" content="{{ asset('FBshare_' ~ center.ref ~ '.jpg') }}"/>
     <meta property="og:type" content="website"/>
