--- a/src/gospelcenter/PageBundle/Resources/views/Page/home.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/Page/home.html.twig
@@ -22,7 +22,7 @@
     <meta property="og:site_name" content="Gospel Center {{ center.name }}"/>
     <meta property="og:url" content="http://gc-{{ center.ref }}.org"/>
     <meta property="og:description" content="A PLACE WHERE MIRACLES HAPPEN!"/>
-    <meta property="og:image" content="{{ asset('FBshare_' ~ center.ref ~ '.jpg') }}"/>
+    <meta property="og:image" content="http://gc-{{ center.ref }}.org/images/FBshare_{{  center.ref }}.jpg"/>
     <meta property="og:type" content="website"/>
 {% endblock %}
 
