meta for FB share

--- a/src/gospelcenter/CelebrationBundle/Resources/views/Celebration/list.html.twig
+++ b/src/gospelcenter/CelebrationBundle/Resources/views/Celebration/list.html.twig
@@ -16,6 +16,7 @@
 {% block meta %}
     {{ parent() }}
     <meta property="og:title" content="{{ 'gc.title.celebrations'|trans }}"/>
+    <meta property="og:image" content="http://gc-{{ center.ref }}.org/images/FBshare_celebrations.jpg"/>
 {% endblock %}
 
 {% block body %}
