--- a/app/Resources/views/localNew.html.twig
+++ b/app/Resources/views/localNew.html.twig
@@ -14,7 +14,7 @@
 {% block meta %}
     {{ parent() }}
     <meta property="og:site_name" content="Gospel Center {{ center.name }}"/>
-    <meta property="og:url" content="http://gc-{{ center.ref }}.org"/>
+    <meta property="og:url" content="http://gc-{{ center.ref }}.org{{ path(app.request.attributes.get('_route'), app.request.attributes.get('_route_params')) }}"/>
     <meta property="og:description" content="A PLACE WHERE MIRACLES HAPPEN!"/>
     <meta property="og:image" content="http://gc-{{ center.ref }}.org/images/FBshare_{{  center.ref }}.jpg"/>
     <meta property="og:type" content="website"/>
