meta for FB share

--- a/src/gospelcenter/MediaBundle/Resources/views/Media/speaker.html.twig
+++ b/src/gospelcenter/MediaBundle/Resources/views/Media/speaker.html.twig
@@ -1,8 +1,9 @@
 {% extends "gospelcenterMediaBundle::layout.html.twig" %}
 
 {% block meta %}
-    <meta property="og:title" content="Les célébrations avec {{ speaker.person.firstname }} {{ speaker.person.lastname }}"/>
+    <meta property="og:title" content="{{ speaker.person.firstname }} {{ speaker.person.lastname }}"/>
     <meta property="og:image" content="{{ speaker.person.image.webPath| imagine_filter('facebook_share') }}"/>
+    <meta property="og:description" content="Toutes les vidéos et audios de {{ speaker.person.firstname }} {{ speaker.person.lastname }} sur Gospel Center TV"/>
     {{ parent() }}
 {% endblock %}
 
