share button for TV

--- a/src/gospelcenter/MediaBundle/Resources/views/Media/video.html.twig
+++ b/src/gospelcenter/MediaBundle/Resources/views/Media/video.html.twig
@@ -36,7 +36,7 @@
 
                     <section class="social">
                         <ul>
-                            <li>
+                            <li style="list-style: none;">
                                 <a id="facebook" target="_blank" class="icon"
                                    href="https://www.facebook.com/sharer/sharer.php?u={{ url|url_encode }}">Facebook</a>
                             </li>
